<resources>
    <string name="app_name">Weather</string>

    <string name="celsius_format">%s °C</string>
    <string name="percentage_format">%s%</string>
    <string name="hourly_forecast_title">Hourly forecast</string>
    <string name="search">Search</string>
    <string name="city">City</string>
    <string name="metric">Metric</string>
    <string name="standard">Standard</string>
    <string name="imperial">Imperial</string>

    //Measure format
    <string name="temperature_format">%.0f%s</string>
    <string name="speed_format">%.1f%s</string>

    //Temperature signature
    <string name="celsius_temperature_format">°C</string>
    <string name="standard_temperature_format">K</string>
    <string name="imperial_temperature_format">°F</string>

    //Speed signatures
    <string name="metric_standard_speed_format">m/s</string>
    <string name="imperial_speed_format">mph</string>

    //Humidity signatures
    <string name="humidity_format"> %d%%</string>

    <string name="or">Or</string>
    <string name="get_my_location">Get My Location</string>
    <string name="save_location">Save location</string>
    <string name="favourites">Favourites</string>
    <string name="recently_searched_locations">Recently searched locations:</string>

    //Screen app bar titles
    <string name="forecast_screen_title">Forecast</string>
    <string name="gps_screen_title">Getting your location…</string>
    <string name="favorites_screen_title">Favorite locations</string>

    //Error messages
    <string name="no_network_message">No network detected</string>
    <string name="no_location_found">There is no location with that name</string>
    <string name="location_denied">Location Access Denied</string>
    <string name="location_turned_off">Turn on your location service to use this feature</string>
    <string name="valid_location">Enter valid location</string>
    <string name="search_button_pressed">weather_search_button_pressed</string>
    <string name="location_button_pressed">weather_location_button_pressed</string>
    <string name="hourly">Next 48 hours</string>

</resources>